# Asteroids

./: .env.cmake  .gitignore  .gitmodules  Asteroids.sln  CMakeLists.txt  COPYRIGHT.txt  EULA.txt  NOTICES.txt  README.md  build.sh  mingwBuild.bat  privacy-policy.md
Asteroids/: Asteroids.vcxproj  Asteroids.vcxproj.filters
Asteroids/src/: AnimationComponent.cpp  AnimationComponent.h  AsteroidsGame.cpp  Component.h  Entity.cpp  Entity.h  GraphicsComponent.cpp  GraphicsComponent.h  PositionComponent.h  RenderComponent.h  asteroid.cpp  asteroid.hpp  game.cpp  game.hpp  gameObject.cpp  gameObject.hpp  particle.cpp  particle.hpp  renderer.hpp  ship.cpp  ship.hpp  shot.cpp  texture.cpp  texture.hpp  timer.hpp  utils.cpp  utils.hpp  window.hpp
android/: .gitignore  build.gradle  gradle.properties  local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/trexem/weneedmoreasteroids/: LocaleHelper.java
android/app/src/main/java/org/libsdl/app/: SDL.java  SDLActivity.java  SDLAudioManager.java
android/app/src/main/java/org/trexemgames/: MainActivity.kt
android/app/src/main/res/values/: strings.xml
data/lang/: en.json  es.json
include/: Animation.h  AudioManager.h  Camera.h  ClickHandler.h  Colors.h  ComponentTraits.h  Components.h  EntityHandle.h  EntityManager.h  EntityType.h  EnvReader.h  FPair.h  Fonts.h  GUI.h  GUIState.h  GameSessionManager.h  GameState.h  GameStateManager.h  GameStatsManager.h  Log.h  ObfuscateReader.h  PackReader.h  SettingsManager.h  SpatialGridBuilder.h  SystemLocale.h  SystemManager.h  TextManager.h  TextureManager.h  VolumeSource.h  abilities.h  abilitiesText.h  game.hpp  message.h  passiveAbilities.h  renderer.hpp  runGame.h  surface.hpp  texture.hpp  timer.hpp  utils.hpp  (+2 more)
include/GameSave/: GameSave.hpp  GameSettings.h  MetaStats.hpp
include/android/: AdsBridge.h
include/messages/: AbilityMessage.h  AnimationMessage.h  AsteroidAsteroidCollisionMessage.h  ClickMessage.h  CollisionMessage.h  DestroyAsteroidMessage.h  DestroyRocketMessage.h  ExperiencePickupMessage.h  ExperienceSpawnMessage.h  ExplodeMessage.h  GameStateMessage.h  GraphicsSettingsMessage.h  KeyboardMessage.h  LevelUpMessage.h  MessageManager.h  MouseMotionMessage.h  PickupPickedMessage.h  PickupsSpawnMessage.h  TouchMessage.h  VolumeMessage.h  message.h
include/screens/: GameOverScreen.h  LevelUpContainer.h  LevelUpScreen.h  MainMenuScreen.h  PauseScreen.h  PlayingScreen.h  Screen.h  SettingsScreen.h  UpgradeStoreScreen.h
include/screens/Components/: Box.h  Button.h  Label.h  UpgradeButton.h
include/systems/: AbilitySystem.h  AnimationSystem.h  AsteroidSystem.h  AudioSystem.h  BackgroundSystem.h  CollisionSystem.h  DamageSystem.h  ExperienceSystem.h  FollowSystem.h  GUIInteractionSystem.h  GUISystem.h  HealthSystem.h  InputSystem.h  LifeTimeSystem.h  MovementSystem.h  OrbitSystem.h  PhysicsSystem.h  PickupsSystem.h  PlayerSystem.h  ProximitySystem.h  RenderSystem.h  ScreenManager.h  System.h  Systems.h  TooltipSystem.h  TouchJoystickSystem.h  UISystem.h
src/: AbilityMessage.h  AnimationComponent.cpp  AnimationComponent.h  ApplyForceMessage.h  AsteroidsGame.cpp  AudioManager.cpp  CollisionSystem.cpp  Component.cpp  Component.h  Components.cpp  Components.h  Entity.h  EntityManager.cpp  EntityManager.h  EntityType.cpp  EnvReader.cpp  FPair.h  GameSessionManager.cpp  GameStateManager.cpp  GameStatsManager.cpp  GraphicsComponent.cpp  GraphicsComponent.h  KeyboardMessage.h  KeyboardSystem.h  MessageManager.cpp  MessageManager.h  MovementSystem.cpp  ObfuscateReader.cpp  PackReader.cpp  PhysicsSystem.cpp  PhysicsSystem.h  PlayerSystem.cpp  PlayerSystem.h  PositionComponent.cpp  RenderSystem.cpp  RenderSystem.h  SettingsManager.cpp  SpatialGridBuilder.cpp  System.h  SystemLocale.cpp  (+29 more)
src/android/: AdsBridge.cpp
src/messages/: MessageManager.cpp
src/screens/: GameOverScreen.cpp  LevelUpContainer.cpp  LevelUpScreen.cpp  MainMenuScreen.cpp  PauseScreen.cpp  PlayingScreen.cpp  Screen.cpp  SettingsScreen.cpp  UpgradeStoreScreen.cpp
src/screens/Components/: Box.cpp  Button.cpp  Label.cpp  UpgradeButton.cpp
src/systems/: AbilitySystem.cpp  AnimationSystem.cpp  AsteroidSystem.cpp  AudioSystem.cpp  BackgroundSystem.cpp  CollisionSystem.cpp  DamageSystem.cpp  ExperienceSystem.cpp  FollowSystem.cpp  GUIInteractionSystem.cpp  GUISystem.cpp  HealthSystem.cpp  InputSystem.cpp  LifeTimeSystem.cpp  MovementSystem.cpp  OrbitSystem.cpp  PhysicsSystem.cpp  PickupsSystem.cpp  PlayerSystem.cpp  ProximitySystem.cpp  RenderSystem.cpp  ScreenManager.cpp  TooltipSystem.cpp  TouchJoystickSystem.cpp
tools/: deobfuscate.sh  obfuscate.sh  obfuscateAssets.py  statsHelper.py
